@@ -1012,6 +1012,13 @@ hr {
   bottom: 0;
 }
 
+.inset {
+  left: 0;
+  right: 0;
+  top: 0;
+  bottom: 0;
+}
+
 .z0 {
   z-index: 0;
 }
