@@ -7,6 +7,12 @@
 .right  { right:  0; }
 .top    { top:    0; }
 .bottom { bottom: 0; }
+.inset {
+  left:   0;
+  right:  0;
+  top:    0;
+  bottom: 0;
+}
 
 .z0    { z-index: 0;    }
 .z1    { z-index: 1;    }
